# Chessence

./: .gitignore  README.md  chessgame.py  environment.yml  game.py  main.py  pyproject.toml  scratchpad.ipynb
config/: sac_config.yaml  test_config.yaml
docs/: action_sampling.md  game.md  models.md  todo.md
game/: __init__.py  constants.py  king_state.py  model.py  move.py  move_calc.py  search.py  utils.py
game/legacy/: move.py  search.py  utils.py
game/model/: __init__.py  board.py  move.py  piece.py
game/optimized/: king_state.py  king_state_test.py  move.py  utils.py
game/test/: __init__.py  test_king_state.py
models/: simple_critic.py
src/game/: __init__.py  check_valid.py  constants.py  king_state.py  king_state2.py  move_calc  move_calc.py  move_calc_deprecated.py  utils.py
src/game/deprecated/: king_state.py  move_calc_deprecated.py
src/game/model/: __init__.py  board.py  move.py  piece.py
src/train/: __init__.py  utils.py
src/train/experiments/: train_sac.py
src/train/model/: buffer.py  common.py  sac.py
src/train/utils/: buffer.py  logging.py
test/: __init__.py  test_king_state.py  test_move_calc.py  test_moves.py  utils.py
tests/: __init__.py  king_state_test.py  move_calc_test.py  test_king_state.py  test_move_calc.py  test_utils.py  utils.py
tests/game/: deprecated_test_move_calc.py  test_king_state.py  test_make_move.py  test_move_calc.py
tests/train/: test_sac.py  test_shape.py  test_utils.py
